--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,16 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% import 'macros.html' as macros %}
+
+{% block title  %}
+    {{ super() }}
+    Bienvenido
+{% endblock %}
+
+{% block content %}
     {% if user_ip %}
-    <p>Hello, your IP is: {{ user_ip }} </p>
+    <h1>Hello, your IP is: {{ user_ip }} </h1>
     {% else %}
         <a href="{{ url_for('index') }}">go to home</a>
     {% endif %}
-</body>
-</html>
+
+    <ul>
+        {% for toDo in toDos %}
+            {{ macros.render_todo(toDo) }}
+        {% endfor %}
+    </ul>
+{% endblock %}
