Add static files

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav>
-    <ul>
+    <img src="{{ url_for('static', filename='images/Flame.jpeg') }}" alt="Logo">
         <li><a href="{{ url_for('index') }}">go to home</a></li>
         <li><a href="https://github.com/" target="blank">go to github</a></li>
     </ul>
