--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,21 +1,34 @@
 {% extends 'base.html' %}
 {% import 'macros.html' as macros %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
-{% block title  %}
+{% block title %}
     {{ super() }}
     Bienvenido
 {% endblock %}
 
 {% block content %}
-    {% if user_ip %}
-    <h1>Hello, your IP is: {{ user_ip }} </h1>
-    {% else %}
-        <a href="{{ url_for('index') }}">go to home</a>
+    {% if username %}
+        <h1>Bienvenido, {{ username | capitalize }}</h1>
     {% endif %}
 
+    {% if user_ip %}
+        <h3>Tu IP es {{ user_ip }}</h3>
+    {% else %}
+        <a href="{{ url_for('index') }}">Ir a inicio</a>
+    {% endif %}
+
+    <div class="container">
+        <!--<form action="{{ url_for('hello')}}" method="POST">-->
+            <!--{{ login_form.username }}-->
+            <!--{{ login_form.username.label }}-->
+        <!--</form>-->
+        {{ wtf.quick_form(login_form) }}
+    </div>
+
     <ul>
-        {% for toDo in toDos %}
-            {{ macros.render_todo(toDo) }}
+        {% for todo in todos %}
+            {{ macros.render_todo(todo) }}
         {% endfor %}
     </ul>
 {% endblock %}
