--- a/templates/macros.html
+++ b/templates/macros.html
@@ -1,3 +1,3 @@
-{% macro render_todo(toDo) %}
-    <li>Description: {{ toDo }}</li>
+{% macro render_todo(todo) %}
+    <li>Description: {{ todo }}</li>
 {% endmacro %}
