--- a/templates/base.html
+++ b/templates/base.html
@@ -2,16 +2,29 @@
 
 {% block head %}
     {{ super() }}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+
     <title>
-        {% block title %}Flask | {% endblock %}
+        {% block title %}Flask Platzi |{% endblock %}
     </title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
 {% endblock %}
 
 {% block body %}
     {% block navbar %}
         {% include 'navbar.html' %}
     {% endblock %}
-    {% block content %}
+
+    {% for message in get_flashed_messages() %}
+        <div class="alert alert-success alert-dismissible">
+            <button type="button"
+                    data-dismiss="alert"
+                    class="close">&times;</button>
+            {{ message }}
+        </div>
+    {% endfor %}
+
+    {% block content %}{% endblock %}
+    {% block scripts %}
+        {{ super() }}
     {% endblock %}
 {% endblock %}
