--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,9 +1,10 @@
-<!-- <nav>
-    <img src="{{ url_for('static', filename='images/Flame.jpeg') }}" alt="Logo">
-        <li><a href="{{ url_for('index') }}">go to home</a></li>
-        <li><a href="https://github.com/" target="blank">go to github</a></li>
-    </ul>
-</nav> -->
+<!--<nav>-->
+    <!--<ul>-->
+        <!--<img src="{{ url_for('static', filename='images/platzi.png')}}" alt="Platzi Logo">-->
+        <!--<li><a href="{{ url_for('index') }}">Ir a inicio</a></li>-->
+        <!--<li><a href="https://platzi.com" target="_blank">Ir a Platzi</a></li>-->
+    <!--</ul>-->
+<!--</nav>-->
 
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
@@ -18,16 +19,16 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="{{ url_for('index') }}">
-                <img src="{{ url_for('static', filename='images/Flame.jpeg') }}" alt="Logo"
+                <img src="{{ url_for('static', filename='images/platzi.png') }}"
                      style="max-width: 48px"
-                     alt="principal logo">
+                     alt="Platzi logo">
             </a>
         </div>
 
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('index') }}">go to home</a></li>
-                <li><a href="https://github.com/" target="blank">go to github</a></li>
+                <li><a href="{{ url_for('index') }}">Inicio</a></li>
+                <li><a href="https://platzi.com" target="_blank">Platzi</a></li>
             </ul>
         </div>
     </div>
